breadcrumb component's visibility fixed on smaller veiwports

--- a/scss/components/_breadcrumb.scss
+++ b/scss/components/_breadcrumb.scss
@@ -1,5 +1,11 @@
 .l-breadcrumb {
+    display: none;
+
     & > .breadcrumb-link {
         margin-right: 1.5rem;
+    }
+
+    @include up-media("xl") {
+        display: block;
     }
 }
